[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.18",
]

[project]
name = "pyproject-fmt"
description = "Format your pyproject.toml file"
readme = "README.md"
keywords = [
  "format",
  "pyproject",
]
license.file = "LICENSE.txt"
authors = [{ name = "Bernat Gabor", email = "gaborjbernat@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "natsort>=8.4",
  "packaging>=23.2",
  "tomlkit>=0.12.1",
]
optional-dependencies.test = [
  "covdefaults>=2.3",
  "pytest>=7.4.2",
  "pytest-cov>=4.1",
  "pytest-mock>=3.11.1",
]
