[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.18",
]

[project]
name = "pyproject-fmt"
dynamic = [
  "version",
]
dependencies = [
  "natsort>=8.4",
  "packaging>=23.2",
  "pytest-mock>=3.11.1",
  "tomlkit>=0.12.1",
]

[tool.hatch]
build.dev-mode-dirs = ["src"]
build.hooks.vcs.version-file = "src/pyproject_fmt/_version.py"
build.targets.sdist.include = ["/src", "/tests","tox.ini"]
version.source = "vcs"
