[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.3",
  "hatchling>=1.18",
]

[project]
name = "bug-narrower"
dynamic = [
  "version",
]
dependencies = [
  "pytest-mock>=3.11.1",
]

[tool.hatch]
build.dev-mode-dirs = ["src"]
build.hooks.vcs.version-file = "src/pyproject_fmt/_version.py"
version.source = "vcs"
